[package]
name = "asic-miner-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32"
egui = "0.32"
egui_extras = { version = "0.32", features = ["default", "image"] }
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
egui_plot = "0.33"
#asic-rs = "0.1"
asic-rs = { git = "https://github.com/256-Foundation/asic-rs" }
tokio = { version = "1.47", features = ["full"] }
ipnetwork = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "1.0"
csv = "1.3"
chrono = "0.4"
rfd = "0.15"
dirs = "6.0"

[profile.release]
opt-level = 2
